<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:title="@string/filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="ifRoom"
        >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@id/all"
                    android:title="@string/all"
                    android:checked="true"
                    />

                <item
                    android:id="@id/current_month"
                    android:title="@string/current_month"
                    />

                <item
                    android:id="@id/another_month"
                    android:title="@string/another_month"
                    />
            </group>
        </menu>
    </item>
</menu>