<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".NewDebtActivity"
    >

    <include layout="@layout/include_appbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@id/original_amount_helper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@id/original_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:imeOptions="actionNext"
                android:hint="@string/original_amount"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@id/related_to_helper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@id/related_to"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                android:selectAllOnFocus="true"
                android:imeOptions="actionNext"
                android:hint="@string/related_to"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@id/creditor_helper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@id/creditor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName|textCapWords"
                android:selectAllOnFocus="true"
                android:imeOptions="actionDone"
                android:hint="@string/creditor"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@id/due_date_helper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@id/due_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:focusable="false"
                android:cursorVisible="false"
                android:longClickable="false"
                android:clickable="true"
                android:hint="@string/due_date"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>